@@ -29,4 +29,9 @@ public class BCDLongField extends BCDIntField {
   public void write(XMLWriter xmlWriter, String name, Fieldable f) throws IOException {
     xmlWriter.writeLong(name,toExternal(f));
   }
+
+  @Override
+  public Long toObject(Fieldable f) {
+    return Long.valueOf( toExternal(f) );
+  }
 }
